--- a/data/variable_view.html
+++ b/data/variable_view.html
@@ -5,14 +5,13 @@
 </tr>
 <tr>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">year</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Year</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;"></td>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;" colspan="2"><em>range: 2018-2022</em></td>
 </tr>
 <tr>
 <td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">quarter</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Calendar quarter</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Jan/Mar<br>Apr/Jun<br>Jul/Sep<br>Oct/Dec</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee"></td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee" colspan="2"><em>range: 1-4</em></td>
 </tr>
 <tr>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">sequence</td>
@@ -56,82 +55,70 @@
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">White<br>Mixed/Multiple ethnic groups<br>Indian<br>Pakistani<br>Bangladeshi<br>Chinese<br>Any other Asian background<br>Black/African/Caribbean/Black British<br>Other ethnic group</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">DISEA</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee"></td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">STATR</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Employment status (main job)</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2<br>3<br>4</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Employee<br>Self-employed<br>Government scheme<br>Unpaid family worker</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">PUBLICR</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Whether working in public or private sector<br>(reported)</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Private sector<br>Public sector</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">INDE07M</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Industry section (main job)</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Agriculture, forestry and fishing<br>Energy and water<br>Manufacturing<br>Construction<br>Distribution, hotels and restaurants<br>Transport and communication<br>Banking and finance<br>Public admin, education and health<br>Other services</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">occu1</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Major occupation group (main job)</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Managers, Directors And Senior Officials<br>Professional Occupations<br>Associate Professional Occupations<br>Administrative And Secretarial Occupations<br>Skilled Trades Occupations<br>Caring, Leisure And Other Service Occupations<br>Sales And Customer Service Occupations<br>Process, Plant And Machine Operatives<br>Elementary Occupations</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">FTPTWK</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Whether full or part time in main job</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Full-time<br>Part-time</td>
-</tr>
-<tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">YPTJOB</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Reason for part time job</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">STATR</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Employment status (main job)</td>
 <td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Student/still at school<br>Ill/disabled<br>Could not find full-time job<br>Did not want full-time job</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Employee<br>Self-employed<br>Government scheme<br>Unpaid family worker</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">JOBTYP</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Whether job permanent</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">PUBLICR</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Whether working in public or private sector<br>(reported)</td>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Permanent<br>Not permanent in some way</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Private sector<br>Public sector</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">WHYTMP6</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Reason for part time job</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4<br>5</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Contract which includes period of training<br>Had a contract for probationary period<br>Could not find a permanent job<br>Did not want a permanent job<br>Some other reason</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">INDE07M</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Industry section (main job)</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Agriculture, forestry and fishing<br>Energy and water<br>Manufacturing<br>Construction<br>Distribution, hotels and restaurants<br>Transport and communication<br>Banking and finance<br>Public admin, education and health<br>Other services</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">SECJOB</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Whether had second job in reference week</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Yes<br>No</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">occu1</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Major occupation group (main job)</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Managers, Directors And Senior Officials<br>Professional Occupations<br>Associate Professional Occupations<br>Administrative And Secretarial Occupations<br>Skilled Trades Occupations<br>Caring, Leisure And Other Service Occupations<br>Sales And Customer Service Occupations<br>Process, Plant And Machine Operatives<br>Elementary Occupations</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Y2JOB</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Whether had 2 jobs because of a change of job in<br>reference week</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">FTPTWK</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Whether full or part time in main job</td>
 <td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Yes (changed jobs during week)<br>No</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Full-time<br>Part-time</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">STAT2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Employment status (second job)</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">YPTJOB</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Reason for part time job</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2<br>3<br>4</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Student/still at school<br>Ill/disabled<br>Could not find full-time job<br>Did not want full-time job</td>
+</tr>
+<tr>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">JOBTYP</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Whether job permanent</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Permanent<br>Not permanent in some way</td>
+</tr>
+<tr>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">WHYTMP6</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Reason for part time job</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2<br>3<br>4<br>5</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Contract which includes period of training<br>Had a contract for probationary period<br>Could not find a permanent job<br>Did not want a permanent job<br>Some other reason</td>
+</tr>
+<tr>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">SECJOB</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Whether had second job in reference week</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Yes<br>No</td>
+</tr>
+<tr>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Y2JOB</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Whether had 2 jobs because of a change of job in<br>reference week</td>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">1<br>2</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top;">Employee<br>Self-employed</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top;">Yes (changed jobs during week)<br>No</td>
 </tr>
 <tr>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">INDS07S</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Industry section (Second job)</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>16<br>17<br>18<br>19<br>20<br>21</td>
-<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Agriculture, forestry and fishing<br>Mining and quarrying<br>Manufacturing<br>Electricity, gas, steam and air conditioning supply<br>Water supply, sewerage, waste management and remediation activities<br>Construction<br>Wholesale and retail trade; repair of motor vehicles and motorcycles<br>Transportation and storage<br>Accommodation and food service activities<br>Information and communication<br>Financial and insurance activities<br>Real estate activities<br>Professional, scientific and technical activities<br>Administrative and support service activities<br>Public administration and defence; compulsory social security<br>Education<br>Human health and social work activities<br>Arts, entertainment and recreation<br>Other service activities<br>Activities of households as employers; undifferentiated goods- and services producing activities of households for own use<br>Activities of extraterritorial organisations and bodies</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">STAT2</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Employment status (second job)</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">1<br>2</td>
+<td style="padding:0.2cm; text-align:left; vertical-align:top; background-color:#eeeeee">Employee<br>Self-employed</td>
 </tr>
 <tr>
 <td style="padding:0.2cm; text-align:left; vertical-align:top;">occu2</td>
